# Movie-Recommendation-System

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
config/: settings.yaml
src/app/: __init__.py  main_pipeline.py
src/ingestion/: data_downloader.py  kg_graph.py
src/schemas/: __init__.py  llm_extraction.py
src/services/: __init__.py  embeddings.py  langfuse_client.py  llm_client.py  neo4j_client.py
src/utils/: __init__.py  config_loader.py  graph_search_helper.py
tests/: test_config_loader.py  test_embedding.py  test_llm.py  test_main_pipeline.py
